# yet-another-eink-calendar

./: .gitignore  CMakeLists.txt  env.bat  sdkconfig  sdkconfig.old
components/epaper/: CMakeLists.txt
components/epaper/include/: epaper.h
components/epaper/src/: epaper.c
components/fgui/: CMakeLists.txt
components/fgui/include/: fgui.h  fgui_font.h
components/fgui/src/: UbuntuMono-R_16X28.c  UbuntuMono-R_24X42.c  UbuntuMono-R_31X64.c  UbuntuMono-R_39X70.c  UbuntuMono-R_62X112.c  VCR_OSD_MONO_1_28X39.c  VCR_OSD_MONO_1_57X81.c  fgui.c  fgui_clearregion.c  fgui_config.h  fgui_extra.c  fgui_extra.h  fgui_helper.c  fgui_helper.h  fgui_line.c  fgui_sprite.c  fgui_text.c  ugui_fonts.c
components/osutils/: CMakeLists.txt
components/osutils/include/os/: delay.h
components/osutils/src/: delay.c
components/weather/: CMakeLists.txt  generate.py  wmo.py  wmo_codes.json
components/weather/include/: weather-json.h  weather.h
components/weather/src/: weather-icons.c  weather-icons.h  weather-json.c
components/weather/src/128x128/: chanceflurries_128x128.c  chancerain_128x128.c  chancesleet_128x128.c  chancesnow_128x128.c  chancetstorms_128x128.c  clear_128x128.c  cloudy_128x128.c  flurries_128x128.c  fog_128x128.c  hazy_128x128.c  mostlycloudy_128x128.c  mostlysunny_128x128.c  nt_chanceflurries_128x128.c  nt_chancerain_128x128.c  nt_chancesleet_128x128.c  nt_chancesnow_128x128.c  nt_chancetstorms_128x128.c  nt_clear_128x128.c  nt_cloudy_128x128.c  nt_flurries_128x128.c  nt_fog_128x128.c  nt_hazy_128x128.c  nt_mostlycloudy_128x128.c  nt_mostlysunny_128x128.c  nt_partlycloudy_128x128.c  nt_partlysunny_128x128.c  nt_rain_128x128.c  nt_sleet_128x128.c  nt_snow_128x128.c  nt_sunny_128x128.c  nt_tstorms_128x128.c  nt_unknown_128x128.c  partlycloudy_128x128.c  partlysunny_128x128.c  rain_128x128.c  sleet_128x128.c  snow_128x128.c  sunny_128x128.c  tstorms_128x128.c  unknown_128x128.c
components/weather/src/16x16/: chanceflurries_16x16.c  chancerain_16x16.c  chancesleet_16x16.c  chancesnow_16x16.c  chancetstorms_16x16.c  clear_16x16.c  cloudy_16x16.c  flurries_16x16.c  fog_16x16.c  hazy_16x16.c  mostlycloudy_16x16.c  mostlysunny_16x16.c  nt_chanceflurries_16x16.c  nt_chancerain_16x16.c  nt_chancesleet_16x16.c  nt_chancesnow_16x16.c  nt_chancetstorms_16x16.c  nt_clear_16x16.c  nt_cloudy_16x16.c  nt_flurries_16x16.c  nt_fog_16x16.c  nt_hazy_16x16.c  nt_mostlycloudy_16x16.c  nt_mostlysunny_16x16.c  nt_partlycloudy_16x16.c  nt_partlysunny_16x16.c  nt_rain_16x16.c  nt_sleet_16x16.c  nt_snow_16x16.c  nt_sunny_16x16.c  nt_tstorms_16x16.c  nt_unknown_16x16.c  partlycloudy_16x16.c  partlysunny_16x16.c  rain_16x16.c  sleet_16x16.c  snow_16x16.c  sunny_16x16.c  tstorms_16x16.c  unknown_16x16.c
components/weather/src/32x32/: chanceflurries_32x32.c  chancerain_32x32.c  chancesleet_32x32.c  chancesnow_32x32.c  chancetstorms_32x32.c  clear_32x32.c  cloudy_32x32.c  flurries_32x32.c  fog_32x32.c  hazy_32x32.c  mostlycloudy_32x32.c  mostlysunny_32x32.c  nt_chanceflurries_32x32.c  nt_chancerain_32x32.c  nt_chancesleet_32x32.c  nt_chancesnow_32x32.c  nt_chancetstorms_32x32.c  nt_clear_32x32.c  nt_cloudy_32x32.c  nt_flurries_32x32.c  nt_fog_32x32.c  nt_hazy_32x32.c  nt_mostlycloudy_32x32.c  nt_mostlysunny_32x32.c  nt_partlycloudy_32x32.c  nt_partlysunny_32x32.c  nt_rain_32x32.c  nt_sleet_32x32.c  nt_snow_32x32.c  nt_sunny_32x32.c  nt_tstorms_32x32.c  nt_unknown_32x32.c  partlycloudy_32x32.c  partlysunny_32x32.c  rain_32x32.c  sleet_32x32.c  snow_32x32.c  sunny_32x32.c  tstorms_32x32.c  unknown_32x32.c
components/weather/src/64x64/: chanceflurries_64x64.c  chancerain_64x64.c  chancesleet_64x64.c  chancesnow_64x64.c  chancetstorms_64x64.c  clear_64x64.c  cloudy_64x64.c  flurries_64x64.c  fog_64x64.c  hazy_64x64.c  mostlycloudy_64x64.c  mostlysunny_64x64.c  nt_chanceflurries_64x64.c  nt_chancerain_64x64.c  nt_chancesleet_64x64.c  nt_chancesnow_64x64.c  nt_chancetstorms_64x64.c  nt_clear_64x64.c  nt_cloudy_64x64.c  nt_flurries_64x64.c  nt_fog_64x64.c  nt_hazy_64x64.c  nt_mostlycloudy_64x64.c  nt_mostlysunny_64x64.c  nt_partlycloudy_64x64.c  nt_partlysunny_64x64.c  nt_rain_64x64.c  nt_sleet_64x64.c  nt_snow_64x64.c  nt_sunny_64x64.c  nt_tstorms_64x64.c  nt_unknown_64x64.c  partlycloudy_64x64.c  partlysunny_64x64.c  rain_64x64.c  sleet_64x64.c  snow_64x64.c  sunny_64x64.c  tstorms_64x64.c  unknown_64x64.c
components/weather/test/: test_weather-json.c
main/: CMakeLists.txt  calendar.c  calendar.h  httpd.c  httpd.h  idf_component.yml  main.c  no-wifi.c  priv_epaper.c  priv_epaper.h  priv_weather_widget.c  priv_weather_widget.h  priv_wifi.c  priv_wifi.h
server/: main.py  requirements.txt  screen.py  test.py  weather.py
server/template/: image.html  image_template.html
server/template/css/: style.css
tools/: im2struct.py  makefsdata.py  no-wifi.c  no-wifi.xcf
www/: index.html
