idf_component_register(SRCS
${CMAKE_CURRENT_LIST_DIR}/src/fgui_clearregion.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui_extra.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui_helper.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui_line.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui_sprite.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui_text.c
${CMAKE_CURRENT_LIST_DIR}/src/fgui.c
${CMAKE_CURRENT_LIST_DIR}/src/ugui_fonts.c
${CMAKE_CURRENT_LIST_DIR}/src/VCR_OSD_MONO_1_28X39.c
${CMAKE_CURRENT_LIST_DIR}/src/VCR_OSD_MONO_1_57X81.c
${CMAKE_CURRENT_LIST_DIR}/src/UbuntuMono-R_16X28.c
${CMAKE_CURRENT_LIST_DIR}/src/UbuntuMono-R_31X64.c
${CMAKE_CURRENT_LIST_DIR}/src/UbuntuMono-R_62X112.c
${CMAKE_CURRENT_LIST_DIR}/src/UbuntuMono-R_39X70.c
${CMAKE_CURRENT_LIST_DIR}/src/UbuntuMono-R_24X42.c
INCLUDE_DIRS
${CMAKE_CURRENT_LIST_DIR}/include
)