idf_component_register(SRCS
${CMAKE_CURRENT_LIST_DIR}/src/weather-icons.c
${CMAKE_CURRENT_LIST_DIR}/src/weather-json.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_unknown_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_chancesleet_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_sleet_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_chanceflurries_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_flurries_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_partlycloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/sunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/unknown_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/chanceflurries_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/cloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_chancerain_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_mostlycloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_snow_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/hazy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_clear_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/partlycloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/fog_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/snow_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/mostlysunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/partlysunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/rain_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/chancerain_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/sleet_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_rain_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_fog_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/mostlycloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/clear_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/flurries_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_chancesnow_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_chancetstorms_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_partlysunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/chancetstorms_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/chancesnow_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_mostlysunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/chancesleet_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_cloudy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_hazy_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_sunny_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/nt_tstorms_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/32x32/tstorms_32x32.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_unknown_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_chancesleet_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_sleet_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_chanceflurries_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_flurries_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_partlycloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/sunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/unknown_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/chanceflurries_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/cloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_chancerain_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_mostlycloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_snow_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/hazy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_clear_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/partlycloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/fog_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/snow_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/mostlysunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/partlysunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/rain_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/chancerain_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/sleet_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_rain_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_fog_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/mostlycloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/clear_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/flurries_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_chancesnow_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_chancetstorms_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_partlysunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/chancetstorms_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/chancesnow_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_mostlysunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/chancesleet_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_cloudy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_hazy_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_sunny_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/nt_tstorms_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/64x64/tstorms_64x64.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_unknown_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_chancesleet_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_sleet_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_chanceflurries_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_flurries_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_partlycloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/sunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/unknown_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/chanceflurries_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/cloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_chancerain_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_mostlycloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_snow_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/hazy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_clear_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/partlycloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/fog_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/snow_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/mostlysunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/partlysunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/rain_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/chancerain_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/sleet_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_rain_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_fog_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/mostlycloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/clear_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/flurries_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_chancesnow_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_chancetstorms_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_partlysunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/chancetstorms_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/chancesnow_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_mostlysunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/chancesleet_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_cloudy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_hazy_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_sunny_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/nt_tstorms_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/16x16/tstorms_16x16.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_unknown_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_chancesleet_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_sleet_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_chanceflurries_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_flurries_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_partlycloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/sunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/unknown_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/chanceflurries_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/cloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_chancerain_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_mostlycloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_snow_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/hazy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_clear_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/partlycloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/fog_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/snow_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/mostlysunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/partlysunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/rain_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/chancerain_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/sleet_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_rain_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_fog_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/mostlycloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/clear_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/flurries_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_chancesnow_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_chancetstorms_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_partlysunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/chancetstorms_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/chancesnow_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_mostlysunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/chancesleet_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_cloudy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_hazy_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_sunny_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/nt_tstorms_128x128.c
${CMAKE_CURRENT_LIST_DIR}/src/128x128/tstorms_128x128.c
INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/include
REQUIRES json
)


